add the check_val_leak param

--- a/nbs/00_text_main_lm.ipynb
+++ b/nbs/00_text_main_lm.ipynb
@@ -160,7 +160,8 @@
     "    \n",
     "\n",
     "    def do_all_preprocessing(self,\n",
-    "                             shuffle_trn=True # To shuffle the train set before tokenization\n",
+    "                             shuffle_trn=True, # To shuffle the train set before tokenization\n",
+    "                             check_val_leak=True # To check (and remove) training data which is leaked to validation set\n",
     "                            ):\n",
     "        if self._processed_call:\n",
     "            warnings.warn('Your dataset has already been processed. Returning the previous processed DatasetDict...')\n",
@@ -186,7 +187,8 @@
     "        self._simplify_ddict()\n",
     "        \n",
     "        # Check validation leaking\n",
-    "        self._check_validation_leaking()\n",
+    "        if check_val_leak:\n",
+    "            self._check_validation_leaking()\n",
     "        \n",
     "        # Shuffle train\n",
     "        if shuffle_trn:\n",
@@ -259,13 +261,14 @@
     "                             trn_size=None, # The number of training data to be tokenized\n",
     "                             tok_num_proc=None, # Number of processes for tokenization\n",
     "                             shuffle_trn=True, # To shuffle the train set before tokenization\n",
+    "                             check_val_leak=True # To check (and remove) training data which is leaked to validation set\n",
     "                            ):\n",
     "        \"\"\"\n",
     "        This will perform `do_all_processing` then `do_tokenization`\n",
     "        \"\"\"\n",
     "        if self.seed:\n",
     "            seed_everything(self.seed)\n",
-    "        _ = self.do_all_preprocessing(shuffle_trn)\n",
+    "        _ = self.do_all_preprocessing(shuffle_trn,check_val_leak)\n",
     "        _ = self.do_tokenization(tokenizer,max_length,line_by_line,stride,trn_size,tok_num_proc)\n",
     "        \n",
     "    \n",
@@ -601,12 +604,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>15413</th>\n",
-       "      <td>1075</td>\n",
-       "      <td>36</td>\n",
-       "      <td>Beautiful, but totally see-through</td>\n",
-       "      <td>This dress is elegant and really lovely. it lo...</td>\n",
-       "      <td>3</td>\n",
+       "      <th>8404</th>\n",
+       "      <td>1092</td>\n",
+       "      <td>41</td>\n",
+       "      <td>Tunic not dress</td>\n",
+       "      <td>This is absolutely beautiful.  but i am only 5...</td>\n",
+       "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>General</td>\n",
@@ -614,89 +617,89 @@
        "      <td>Dresses</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20110</th>\n",
-       "      <td>883</td>\n",
-       "      <td>25</td>\n",
-       "      <td>Not for curves</td>\n",
-       "      <td>This top is very pretty on the hanger. however...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <th>16632</th>\n",
+       "      <td>145</td>\n",
+       "      <td>53</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Love these lounge pants. i live in florida and...</td>\n",
+       "      <td>5</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Initmates</td>\n",
+       "      <td>Intimate</td>\n",
+       "      <td>Sleep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19157</th>\n",
+       "      <td>865</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Classic and elegant</td>\n",
+       "      <td>I purchased this online without seeing in pers...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>General Petite</td>\n",
        "      <td>Tops</td>\n",
        "      <td>Knits</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2835</th>\n",
-       "      <td>984</td>\n",
-       "      <td>53</td>\n",
-       "      <td>Beautiful, unique piece!</td>\n",
-       "      <td>I love this thing. i bought it yesterday and a...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>26</td>\n",
-       "      <td>General</td>\n",
-       "      <td>Jackets</td>\n",
-       "      <td>Jackets</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15507</th>\n",
-       "      <td>1099</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Gorgeous dress!</td>\n",
-       "      <td>I worse this dress to a rehersal dinner and re...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>General Petite</td>\n",
-       "      <td>Dresses</td>\n",
-       "      <td>Dresses</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3081</th>\n",
-       "      <td>505</td>\n",
-       "      <td>26</td>\n",
-       "      <td>Light and airy pjs</td>\n",
-       "      <td>I love these pjs! i thought $100 for the set w...</td>\n",
+       "      <th>20139</th>\n",
+       "      <td>520</td>\n",
+       "      <td>39</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Great tank top! loved it so much that i ordere...</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>Initmates</td>\n",
        "      <td>Intimate</td>\n",
-       "      <td>Sleep</td>\n",
+       "      <td>Layering</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16419</th>\n",
+       "      <td>1086</td>\n",
+       "      <td>37</td>\n",
+       "      <td>So versatile</td>\n",
+       "      <td>This is definitely true to size. i tried both ...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>General</td>\n",
+       "      <td>Dresses</td>\n",
+       "      <td>Dresses</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Clothing ID  Age                               Title  \\\n",
-       "15413         1075   36  Beautiful, but totally see-through   \n",
-       "20110          883   25                      Not for curves   \n",
-       "2835           984   53            Beautiful, unique piece!   \n",
-       "15507         1099   28                     Gorgeous dress!   \n",
-       "3081           505   26                  Light and airy pjs   \n",
+       "       Clothing ID  Age                Title  \\\n",
+       "8404          1092   41      Tunic not dress   \n",
+       "16632          145   53                  NaN   \n",
+       "19157          865   48  Classic and elegant   \n",
+       "20139          520   39                  NaN   \n",
+       "16419         1086   37         So versatile   \n",
        "\n",
        "                                             Review Text  Rating  \\\n",
-       "15413  This dress is elegant and really lovely. it lo...       3   \n",
-       "20110  This top is very pretty on the hanger. however...       3   \n",
-       "2835   I love this thing. i bought it yesterday and a...       5   \n",
-       "15507  I worse this dress to a rehersal dinner and re...       5   \n",
-       "3081   I love these pjs! i thought $100 for the set w...       5   \n",
+       "8404   This is absolutely beautiful.  but i am only 5...       5   \n",
+       "16632  Love these lounge pants. i live in florida and...       5   \n",
+       "19157  I purchased this online without seeing in pers...       4   \n",
+       "20139  Great tank top! loved it so much that i ordere...       5   \n",
+       "16419  This is definitely true to size. i tried both ...       5   \n",
        "\n",
        "       Recommended IND  Positive Feedback Count   Division Name  \\\n",
-       "15413                1                        0         General   \n",
-       "20110                0                        1  General Petite   \n",
-       "2835                 1                       26         General   \n",
-       "15507                1                        4  General Petite   \n",
-       "3081                 1                        0       Initmates   \n",
+       "8404                 1                        0         General   \n",
+       "16632                1                        1       Initmates   \n",
+       "19157                1                        2  General Petite   \n",
+       "20139                1                        0       Initmates   \n",
+       "16419                1                       18         General   \n",
        "\n",
        "      Department Name Class Name  \n",
-       "15413         Dresses    Dresses  \n",
-       "20110            Tops      Knits  \n",
-       "2835          Jackets    Jackets  \n",
-       "15507         Dresses    Dresses  \n",
-       "3081         Intimate      Sleep  "
+       "8404          Dresses    Dresses  \n",
+       "16632        Intimate      Sleep  \n",
+       "19157            Tops      Knits  \n",
+       "20139        Intimate   Layering  \n",
+       "16419         Dresses    Dresses  "
       ]
      },
      "execution_count": null,
@@ -871,14 +874,14 @@
       "Done\n",
       "-------------------- Dropping unused features --------------------\n",
       "Done\n",
-      "- Number of rows leaked: 2, which is 0.01% of training set\n",
+      "- Number of rows leaked: 4, which is 0.02% of training set\n",
       "Filtering leaked data out of training set...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc3203140b37474eb794bff02be26442",
+       "model_id": "bf38ef48c255481caf3f84a87a0dbede",
        "version_major": 2,
        "version_minor": 0
       },
@@ -900,12 +903,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9512c6bc5f2b45e18d3522702eb80b38",
+       "model_id": "9e79854a4d824b78b6c6f5daec94ab5f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Flattening the indices (num_proc=4):   0%|          | 0/18100 [00:00<?, ? examples/s]"
+       "Flattening the indices (num_proc=4):   0%|          | 0/18098 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -934,7 +937,7 @@
        "DatasetDict({\n",
        "    train: Dataset({\n",
        "        features: ['Review Text'],\n",
-       "        num_rows: 18100\n",
+       "        num_rows: 18098\n",
        "    })\n",
        "    validation: Dataset({\n",
        "        features: ['Review Text'],\n",
@@ -967,9 +970,9 @@
     {
      "data": {
       "text/plain": [
-       "{'Review Text': ['Loose fitting and comfortable without losing its shape. \\r\\nlooks great on. the tie in front adds to the dress. \\r\\n\\r\\ni love to wear with tan knee-high boots.',\n",
-       "  'This bra is beautiful. the lace is so lovely and soft and looks fabulous on. my only criticism is it runs very small. i am a 32 a and order the size 1 and it is snug... just order a size up (or two) and it should be perfect.',\n",
-       "  'I want to be the person who lounges like the model...but this was huge and more wool-feeling than the lightweight shawl i was hoping for. i am an 8, got the xs/s it was the right size....i returned it.']}"
+       "{'Review Text': ['Chic and comfortable even in 90 degree heat. so easy to wear.',\n",
+       "  'Runs really large. i am 5\\'4\", 120lbs, 32c, and had to exchange xs for xxs for width, but then the sleeves were a little tight. decided to keep the xxs in white.',\n",
+       "  'I am usually between a 8 and a 10 and was an 8 in this skirt, it is very nice because it has so many soft colors in it and will go with anything. i live in florida so for me this is a fall skirt! i like the look of a wrap and it is not a wrap it fits great.']}"
       ]
      },
      "execution_count": null,
@@ -989,9 +992,9 @@
     {
      "data": {
       "text/plain": [
-       "{'Review Text': [\"Love this skirt!  i purchased the chino skirt during the summer and wore it weekly.  this skirt is the fall equivalent!  flattering and true to size!  there is some stretch to it so it's very comfortable.  highly recommend!\",\n",
-       "  \"The photo misrepresents how large this sweater is. it is giant! petite ladies stay away from this sweater. i ordered an xs and usually can manage to fit in a regular xs, but this just floored me. the neckline wouldn't even stay up on my upper body, it was that loose. also the width of the sweater does not at all hug the body as shows on the model. it is like a tent. i'm so bummed. the color blue is nice and the sweater is really soft. it's too bad it doesn't fit smaller women.\",\n",
-       "  'Like the other reviewer said it&#39;s hard to get on and i had to size down like i often do at retailer. but it&#39;s so pretty and it&#39;s not too short like most rompers. we host thanksgiving every year and i&#39;m so excited to find an alternative to a dress/pants so i can work &amp; cook in style.']}"
+       "{'Review Text': [\"Purchased this for new years eve and an early january wedding. can't say enough good things about it! the lace fabric is soft with the perfect weight. the style is slimming and flattering. although i am short, i have a full bustline and ordered regular rather than petite and it fits perfectly. pants are very easy to hem if needed.\\nneeds very little by way of accessories because the lace edging is so beautiful.4 seasons appropriate!\",\n",
+       "  'This dress is really beautiful. the material is soft and sways, but it is sweater-like, not flimsy. it does seem to run maybe a little large throughout, but i liked that look. not form-fitting, has more of a drape.',\n",
+       "  'Despite retailer\\'s claim that they have \"fixed\" the button issue on this coat, beware. they haven\\'t. i ordered this coat november 18th, feeling safe that the issue that scores of other reviewers had noted was fixed, because retailer indicated \"rest assured, this issue has been fixed\" (as noted in the item description). feeling confident that i\\'d get a non-defective coat at this late date in the quality assurance cycle, i was severely disappointed to open my shipment tonight (nov 24th) immediately di']}"
       ]
      },
      "execution_count": null,
